2008-04-17  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Fixed a bug in exception unwinding, where we wouldn't deref the scope
        chain in global scope, so we would leak ScopeChainNodes when exceptions
        were thrown inside "with" and "catch" scopes.
        
        Also did some cleanup of the unwinding code along the way.
        
        Scope chain reference counting is still wrong in a few ways. I thought
        I would fix this portion of it first.
        
        run-sunspider shows no change.

        * VM/Machine.cpp:
        (KJS::Machine::unwindCallFrame):
        (KJS::Machine::throwException):
        (KJS::Machine::privateExecute):
        * VM/Machine.h:

2008-04-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Add more exception checking to toNumber conversions

        This corrects op_pre_dec, op_negate, op_mod and op_sub.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):

2008-04-17  Geoffrey Garen  <ggaren@apple.com> and Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver Hunt.
        
        Behold: eval.
        
        Introduced a new opcode: op_call_eval. In the normal case, it performs
        an eval. In the case where eval has been overridden in some way, it
        performs a function call.

        * VM/CodeGenerator.h: Added a feature so the code generator knows not
        to optimized locals in eval code.
        
2008-04-17  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Added some ASSERTs to document codegen failures in
        run-javascriptcore-tests.
        
        For all tests, program-level codegen now either succeeds, or fails with
        an ASSERT.

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::addVar):
        (KJS::CodeGenerator::CodeGenerator):
        (KJS::CodeGenerator::newTemporary):
        (KJS::CodeGenerator::newLabel):
